Styling navbar and responsive mode

--- a/index.html
+++ b/index.html
@@ -9,25 +9,52 @@
 
     <link rel="stylesheet" href="./src/style/output.css"/>
 </head>
-<body class="p-2">
+<body class="p-2 lg:px-32">
+
     <!-- auto responsive navigation bar -->
-    <nav id="navbar" class="py-2">
-        <!-- Logo -->
-        <a href="#home" class=""><img src="src/assets/images/logo.png" alt="" class="mb-4"></a>
+    <nav id="navbar" class="py-2 md:flex md:items-center md:justify-around md:py-4 border-b-2 divide-slate-700">
+
+
+        <div id="logo-menu" class="flex justify-between items-center"> 
+            <!-- Logo -->
+        <a href="#home" class=""><img src="src/assets/images/logo.png" alt="" class="mb-0 md:mb-0"></a>
+
+        <!-- Hamburger mobile -->
+        <div id="icon" class="flex gap-6 md:hidden ">
+            <a href="" onclick="">
+                <i class="fa fa-shopping-bag text-[24px] p-2 border" aria-hidden="true"></i>
+            </a>
+            <a href="" onclick="">
+                <i class="fa fa-bars text-[24px] bg-black text-white p-2 lg:hidden" aria-hidden="true"></i>
+            </a>
+        </div>
+        </div>
+
+
+
+        <!-- Search bar -->
+        <div class="flex items-center">
+            <input type="text" class="border border-gray-300 h-10 rounded-sm hidden md:w-32 xl:w-64 md:block px-4 w-64" placeholder="Search..."> 
+        </div>
+        
         <!-- Menu list -->
-        <div id="menu-list" class="flex flex-col bg-black w-full gap-2 px-4">
-            <a href="Home" class="pt-3 text-white">Home</a>
-            <a href="#shop" class=" text-white">Shop</a>
-            <a href="#about" class=" text-white">About</a>
-            <a href="#contact" class="pb-3 text-white">Contact</a>
+        <div id="menu-list">
+            <ul class="flex flex-col bg-black text-white w-full gap-2 lg:gap-8 md:gap-6 px-4 lg:text-base md:bg-white md:text-black md:flex-row">
+                <li class="pt-3 md:pt-0"><a href="Home" >Home</a></li>
+                <li class=" "><a href="#shop" >Shop</a></li>
+                <li class=""><a href="#about" >About</a></li>
+                <li class="pb-3 md:pb-0"><a href="#contact">Contact</a></li>
+            </ul>
         </div>
         <!-- Toogle button -->
-        <a href="" onclick="">
-            <i class="fa fa-shopping-bag text-[24px]" aria-hidden="true"></i>
-        </a>
-        <a href="" onclick="">
-            <i class="fa fa-bars text-[24px] bg-black text-white p-2" aria-hidden="true"></i>
-        </a>
+        <div id="icon" class="md:flex gap-6 hidden ">
+            <a href="" onclick="">
+                <i class="fa fa-shopping-bag text-[24px]" aria-hidden="true"></i>
+            </a>
+            <a href="">
+                <i class="fa fa-user text-[24px]" aria-hidden="true"></i>
+            </a>
+        </div>
     </nav>
 
 
